--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Alegreya'); body {
+@import url('https://fonts.googleapis.com/css?family=Alegreya');
+
+body {
     padding-top: 54px;
-    background: #F7DEDEFF;
+    background: bisque;
     font-family: 'Alegreya', serif;
 }
 
@@ -30,7 +32,7 @@ h2 {
 
 .card {
     height: 100%;
-    background: #7C1B15AA;
+    background: indianred;
     color: #fff;
 }
 
@@ -51,11 +53,6 @@ h2 {
   display: none;
 }
 
-@media (max-width: 768px) {
-    #popupToggle {
-      display: block;    
-    }
-}
 
 .loaderArea {
     background: #fff;
@@ -82,4 +79,17 @@ h2 {
     width: 40px;
     position: absolute;
     top: 0;
+}
+
+@media (max-width: 768px) {
+    #popupToggle {
+      display: block;    
+    }
+}
+
+@media (max-width: 414px) {
+     .loader {
+        left: 22%;
+        top: 30%;
+    }
 }
