--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,7 @@ h2 {
     height: 100%;
     background: indianred;
     color: #fff;
+    box-shadow: 2px 2px 4px indianred;
 }
 
 #about {
@@ -53,40 +54,73 @@ h2 {
   display: none;
 }
 
-
 .loaderArea {
-    background: #fff;
+    background: linear-gradient(90deg, rgba(234, 202, 202, 0.83) 10%, rgb(147, 15, 15) 90%);
     overflow: hidden;
     position: fixed;
     left: 0;
     top: 0;
-    right: 0;
-    bottom: 0;
+    right:0;
+    bottom:0;
     z-index: 100000;
-}
+  }
 
-.loader {
+  .loader {
     height: 40px;
     width: 40px;
     position: absolute;
-    left: 40%;
-    top: 40%;
-}
-
-.loader:before, .loader:after {
+    left: 50%;
+    margin-left: -20px;
+    top: 50%;
+    margin-top: -20px;
+  }
+   
+  .loader:before,
+  .loader:after {
     content: "";
     height: 40px;
     width: 40px;
+    border: 8px solid rgba(56, 21, 21, 0.5);
+    border-radius: 10px;
     position: absolute;
     top: 0;
-}
+  }
+   
+  .loader:before {
+    animation: animate 2s infinite linear;
+  }
+   
+  @keyframes animate {
+    0% {
+      transform: rotate(0) skew(0);
+    }
+     
+    100% {
+      transform: rotate(180deg) skew(360deg);
+    }
+  }
+   
+  .loader:after {
+    animation: animate2 2s infinite linear;
+  }
+   
+  @keyframes animate2 {
+    0% {
+      transform: rotate(0) skew(0);
+    }
+     
+    100% {
+      transform: rotate(-180deg) skew(-360deg);
+    }
+  }
 
 @media (max-width: 768px) {
     #popupToggle {
       display: block;    
     }
-}
 
+  
+}
 @media (max-width: 414px) {
      .loader {
         left: 22%;
